[project]
name = "nullstools"
version = "1.0.1"
description = "Инструменты для создания и упаковки модов на языке Python в Null's Brawl"
authors = [
  { name="Darkmean"}
]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["mods", "tools", "game", "builder"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "typing-extensions>=4.0"
]

[project.urls]
Repository = "https://github.com/darkmean-dev/nullstools"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

